--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "vidyasetu-ai",
   "private": true,
@@ -13,8 +14,7 @@
     "react-dom": "^19.2.3",
     "lucide-react": "^0.562.0",
     "@supabase/supabase-js": "^2.90.1",
-    "firebase": "^12.7.0",
-    "@google/genai": "latest"
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
